--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ngx-admin Demo Application</title>
+  <title>FreeStock.market</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
@@ -23,3 +23,4 @@
 
 </body>
 </html>
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
