--- a/src/index.html
+++ b/src/index.html
@@ -33,3 +33,4 @@
 </body>
 </html>
 <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+<script src="https://checkout.stripe.com/checkout.js"></script>s
