--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,6 @@
   </div>
 
 </body>
-</html>
 <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-<script src="https://checkout.stripe.com/checkout.js"></script>s
+<script src="https://checkout.stripe.com/checkout.js"></script>
+</html>
