--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <div id="fb-root"></div>
+  <!-- <div id="fb-root"></div>
   <script>
     (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -39,7 +39,25 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
-  </script>
+  </script> -->
+  <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1959816927586032"
+  theme_color="#20cef5"
+  logged_in_greeting="Hey there. I can answer your questions."
+  logged_out_greeting="Hey there. I can answer your questions.">
+</div>
   <ngx-app>Loading...</ngx-app>
 
   <style>
