--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <meta property="og:url"           content="https://FreeStock.market" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Free Stock Market" />
+  <meta property="og:description"   content="Free bots for stock market automation." />
+  <meta property="og:image"         content="https://FreeStock.market/assets/images/rocket-flat.svg" />
+
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
