--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Free Stock Market" />
   <meta property="og:description" content="Free bots for stock market automation." />
-  <meta property="og:image" content="https://FreeStock.market/assets/images/rocket-flat.svg" />
+  <meta property="og:image" content="https://FreeStock.market/assets/images/rocket.png" />
   <meta property="fb:app_id" content="252450371930672" />
 
   <script>
