--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,14 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <meta name="og:url" content="https://FreeStock.market" />
-  <meta name="og:type" content="website" />
-  <meta name="og:site_name" content="FreeStock.market"/>
-  <meta name="og:title" content="Free Stock Market" />
-  <meta name="og:description" content="Free bots for stock market automation." />
-  <meta name="og:image" content="https://FreeStock.market/assets/images/swing-1200X630.png" />
-  <meta name="fb:app_id" content="252450371930672" />
+  <meta property="og:url" content="https://FreeStock.market" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="FreeStock.market"/>
+  <meta property="og:title" content="Free Stock Market" />
+  <meta property="og:description" content="Free bots for stock market automation." />
+  <meta property="og:image" content="https://FreeStock.market/assets/images/swing-1200X630.png" />
+  <meta property="fb:app_id" content="252450371930672" />
+  <meta name="twitter:card" content="summary_large_image">
 
   <script>
     (function (i, s, o, g, r, a, m) {
