Add google rich snippets.

--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <meta name="description" content="Free bots for stock market automation." />
+ 
   <meta property="og:url" content="https://FreeStock.market" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="FreeStock.market"/>
   <meta property="og:title" content="Free Stock Market" />
   <meta property="og:description" content="Free bots for stock market automation." />
-  <meta property="og:image" content="https://FreeStock.market/assets/images/swing-1200X630.png" />
+  <meta property="og:image" content="https://FreeStock.market/assets/images/rocket-1200X630.png" />
   <meta property="fb:app_id" content="252450371930672" />
   <meta name="twitter:card" content="summary_large_image">
-
+  <script type="application/ld+json">
+    {
+      "@context":"http://schema.org",
+      "@type":"ItemList",
+      "itemListElement":[
+        {
+          "@type":"ListItem",
+          "position":1,
+          "url":"https://freestock.market/#/bots/rocket"
+        },
+        {
+          "@type":"ListItem",
+          "position":2,
+          "url":"https://freestock.market/#/bots/put"
+        },
+        {
+          "@type":"ListItem",
+          "position":3,
+          "url":"https://freestock.market/#/bots/swing"
+        }
+      ]
+    }
+    </script>
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
