Add bot status to home.

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,14 @@
 
   </script>
 
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1959816927586032"
+  theme_color="#20cef5"
+  logged_in_greeting="Oh hey. I'm Rocket. Let's chat."
+  logged_out_greeting="Click chat to start.">
+</div>
 
   <ngx-app>Loading...</ngx-app>
 
